--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="ChatBox">
+    <meta property="og:title" content="Anikey X SanSan">
+    <meta property="og:description" content="ChatBox">
+    <meta property="og:image" content="https://i.pinimg.com/originals/68/59/ae/6859aefd1ee0b159360ea667282480bd.png">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Anikey X SanSan">
+    <meta name="twitter:description" content="ChatBox">
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="twitter:image"
+      content="https://i.pinimg.com/originals/68/59/ae/6859aefd1ee0b159360ea667282480bd.png"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
