--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="ChatBox">
-    <meta property="og:title" content="Anikey X SanSan">
+    <meta name="description" content="Cooking App">
+    <meta property="og:title" content="Nấu Ăn Cùng Hai Chú Mèo Béo">
     <meta property="og:description" content="ChatBox">
     <meta property="og:image" content="https://i.pinimg.com/originals/2b/6a/43/2b6a431ec6a551cd2d11a47102daefed.png">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Anikey X SanSan">
-    <meta name="twitter:description" content="ChatBox">
+    <meta name="twitter:title" content="Nấu Ăn Cùng Hai Chú Mèo Béo">
+    <meta name="twitter:description" content="Cooking App">
     <meta
       name="twitter:image"
       content="https://i.pinimg.com/originals/2b/6a/43/2b6a431ec6a551cd2d11a47102daefed.png"
